--- a/files/etc/sysctl.conf
+++ b/files/etc/sysctl.conf
@@ -1,5 +1,4 @@
 # Defaults are configured in /etc/sysctl.d/* and can be customized in this file
-# Set ram 756 MB - both buffers to 32 MB 
-net.nf_conntrack_max=193536
+# Set both buffers to 32 MB 
 net.core.rmem_max=33554432
 net.core.wmem_max=33554432
